Custom--app/main/default/objects/AcqPipeline__c/fields/Property_Tax_Date_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Property_Tax_Date_Prepaid__c</fullName>
    <label>Property Tax Date Prepaid</label>
    <type>Date</type>
</CustomField>