Custom--app/main/default/objects/AcqPipeline__c/fields/Property_Tax_Est_UW__c.field-meta.xml
<CustomField>
    <fullName>Property_Tax_Est_UW__c</fullName>
    <formula>Prospect_Record__r.Property_Tax_Est_UW__c</formula>
    <label>Property Tax Est. @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>