Custom--app/main/default/objects/AcqPipeline__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <formula>Address__r.Zip__c</formula>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>