Custom--app/main/default/objects/AcqPipeline__c/fields/Prospect_Record__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Record__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prospect Record</label>
    <referenceTo>Acq_Prospect__c</referenceTo>
    <relationshipName>Pipeline</relationshipName>
    <type>Lookup</type>
</CustomField>