Custom--app/main/default/objects/AcqPipeline__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <formula>IF ( Contract_Price_After_Reduction__c=0,Accepted_Contract_Price__c,IF(Accepted_Contract_Price__c=0,Approved_Offer_Price__c ,Contract_Price_After_Reduction__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>