Custom--app/main/default/objects/AcqPipeline__c/fields/Reduction_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Amount_Received__c</fullName>
    <label>Reduction Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>