Custom--app/main/default/objects/AcqPipeline__c/fields/Rehab_Budget_Est__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Budget_Est__c</fullName>
    <formula>IF(
				OR(
							ISNULL(Final_Rehab_Budget_Est_UW__c),Final_Rehab_Budget_Est_UW__c=0,ISBLANK(Final_Rehab_Budget_Est_UW__c)
				  ),
			    	Initial_Rehab_Budget_Estimate__c,Final_Rehab_Budget_Est_UW__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Budget Est</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>