Custom--app/main/default/objects/AcqPipeline__c/fields/Reopen_Time__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Time__c</fullName>
    <label>Reopen Time</label>
    <type>DateTime</type>
</CustomField>