Custom--app/main/default/objects/AcqPipeline__c/fields/Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet__c</fullName>
    <formula>Opportunity__r.Square_Feet__c</formula>
    <label>Square Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>