Custom--app/main/default/objects/AcqPipeline__c/fields/Submitted_Budget__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Budget__c</fullName>
    <label>Submitted Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>