Custom--app/main/default/objects/AcqPipeline__c/fields/Title_Company_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Contact_Name__c</fullName>
    <label>Title Company Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>