Custom--app/main/default/objects/AcqPipeline__c/fields/Title_Company_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Contact_Phone__c</fullName>
    <formula>Title_Company__r.Phone</formula>
    <label>Title Company Contact Phone</label>
    <type>Text</type>
</CustomField>