Custom--app/main/default/objects/AcqPipeline__c/fields/Title_Company_Same_as_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Same_as_Escrow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Company Same as Escrow</label>
    <type>Checkbox</type>
</CustomField>