Custom--app/main/default/objects/AcqPipeline__c/fields/Transaction_Closer__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer IMG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipeline5</relationshipName>
    <type>Lookup</type>
</CustomField>