Custom--app/main/default/objects/AcqPipeline__c/fields/Transaction_Manager__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Manager IMG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipeline4</relationshipName>
    <type>Lookup</type>
</CustomField>