Custom--app/main/default/objects/AcqPipeline__c/fields/Verified_HOA_Name__c.field-meta.xml
<CustomField>
    <fullName>Verified_HOA_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified HOA Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pipeline (Verified HOA Name)</relationshipLabel>
    <relationshipName>Pipeline4</relationshipName>
    <type>Lookup</type>
</CustomField>