Custom--app/main/default/objects/AcqPipeline__c/validationRules/Closing_Contract_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Contract_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISBLANK(Dir_IMG_Closing_Approval_Date__c )),
				ISCHANGED( Closing_Statement_Contract_Price__c )
				)</errorConditionFormula>
    <errorMessage>Closing Contract Price cannot be changed after closing approval</errorMessage>
</ValidationRule>