Custom--app/main/default/objects/AcqPipeline__c/validationRules/Closing_Contract_Price_Cannot_be_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Contract_Price_Cannot_be_0</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					ISPICKVAL(Pipeline_Status__c, 'Contract Reviewed'),
	    Closing_Statement_Contract_Price__c &lt;=0
					)</errorConditionFormula>
    <errorMessage>Closing Contract Price should be greater than 0</errorMessage>
</ValidationRule>