Custom--app/main/default/objects/AcqPipeline__c/validationRules/Closing_Without_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Without_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				doDirectorClosingApproval__c =true,
   	ISPICKVAL( Pipeline_Status__c ,'Review Complete')
				)</errorConditionFormula>
    <errorMessage>Cannot proceed to Closing Approval if due diligence approval is pending or not done</errorMessage>
</ValidationRule>