Custom--app/main/default/objects/AcqPipeline__c/validationRules/EMD.validationRule-meta.xml
<ValidationRule>
    <fullName>EMD</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
				
    OR( 
								doOrderEscrow__c =True,
        doDirectorClosingApproval__c =true, 
        doReview_Complete__c = True,				
							 doDirectorDueDiligenceApproval__c =true
				), 
				
 ISBLANK(Contract_Notes__c) 

)</errorConditionFormula>
    <errorMessage>Please review the contract</errorMessage>
</ValidationRule>