Custom--app/main/default/objects/AcqPipeline__c/validationRules/Final_Budget_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Budget_Missing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					doDirectorDueDiligenceApproval__c = True,
					ISNULL(Final_Rehab_Budget_Est_UW__c )
					)</errorConditionFormula>
    <errorMessage>Final Rehab Budget Estimate cannot be empty. Please complete the budget approval and reduction process first.</errorMessage>
</ValidationRule>