Custom--app/main/default/objects/AcqPipeline__c/validationRules/Funds_Due_from_Buyer_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Funds_Due_from_Buyer_Match</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				doDirectorClosingApproval__c =true, 
				Funds_Due_From_Buyer__c  &lt;> Closing_Statement_Funds_Due_from_Buyer__c
			)</errorConditionFormula>
    <errorMessage>Closing COE Amount should be equal to the COE Amount</errorMessage>
</ValidationRule>