Custom--app/main/default/objects/AcqPipeline__c/validationRules/HOA.validationRule-meta.xml
<ValidationRule>
    <fullName>HOA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				doReview_Complete__c = True,
				ISPICKVAL( HOA_Y_N__c , 'Yes'),
				ISBLANK( Verified_HOA_Name__c )
				)</errorConditionFormula>
    <errorMessage>Since HOA is present, please fill in the Verified HOA Name.</errorMessage>
</ValidationRule>