Custom--app/main/default/objects/AcqPipeline__c/validationRules/Move_to_Queue.validationRule-meta.xml
<ValidationRule>
    <fullName>Move_to_Queue</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Pipeline_Status__c ,'Moved to Queue'),
    ISBLANK(Dir_IMG_Closing_Approval_Date__c)	
				)</errorConditionFormula>
    <errorMessage>Cannot Move to Queue unless Closing Approval is complete</errorMessage>
</ValidationRule>