Custom--app/main/default/objects/AcqPipeline__c/validationRules/Order_Budget_Walk.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Budget_Walk</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    OR( 
        doDirectorClosingApproval__c =true, 
        doReview_Complete__c = True,								
        doDirectorDueDiligenceApproval__c =true
				), 
				
   
					
				doOrderBudgetWalk__c = False
)</errorConditionFormula>
    <errorMessage>Budget Walk Record not found, please order a Budget Walk to proceed forward</errorMessage>
</ValidationRule>