Custom--app/main/default/objects/AcqPipeline__c/validationRules/Review_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
				OR(
         doDirectorClosingApproval__c =true, 
								 doOrderEscrow__c = false,
				     doDirectorDueDiligenceApproval__c =true),
				OR(
								
								ISPICKVAL( Pipeline_Status__c ,'Escrow Ordered'), 
								ISPICKVAL( Pipeline_Status__c ,'Order Budget Walk'))
								
)</errorConditionFormula>
    <errorMessage>Please Order an EMD and enter "Review Complete"</errorMessage>
</ValidationRule>