Custom--app/main/default/objects/AcqPipeline__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Complete_Address__c</columns>
    <columns>Pipeline_Status__c</columns>
    <columns>Market__c</columns>
    <columns>Expected_Escrow_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>