Custom--app/main/default/objects/AcqPipeline__c/listViews/Assigned_to_Me.listView-meta.xml
<ListView>
    <fullName>Assigned_to_Me</fullName>
    <columns>NAME</columns>
    <columns>Complete_Address__c</columns>
    <columns>Accepted_Contract_Price__c</columns>
    <columns>Director_IMG__c</columns>
    <columns>Pipeline_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Assigned to Me</label>
</ListView>